@@ -61,4 +61,11 @@ uint32_t hashword(const uint32_t *k, size_t length, uint32_t initval);
  */
 uint32_t hashlittle(const void *k, size_t length, uint32_t initval);
 
+/**
+ * Set the randomisation initial value, set this before threads start,
+ * and before hashing stuff (because it changes subsequent results).
+ * @param v: value
+ */
+void hash_set_raninit(uint32_t v);
+
 #endif /* UTIL_STORAGE_LOOKUP3_H */
